# HPL1Engine

./: .gitignore  CMakeLists.txt  HPL.sln  HPL.vcproj  HPL.vcxproj  HPL.vcxproj.filters  LICENSE-shaders  LICENSE-tests  LICENSE-textures  NOTICE  README.markdown  TODO
CMakeModules/: COPYING  FindALUT.cmake  FindGLee.cmake  FindOGG.cmake  FindTinyXML.cmake  README
HPL.xcodeproj/: project.pbxproj
assets/: materials.cfg  resources.cfg
assets/fonts/: test.lang  viewer.fnt  viewer_00.tga  viewer_01.tga
assets/gui/: gui_default.skin
assets/maps/: ai_test_map.dae  bug_test01.dae  map1test.dae  maptest0.dae  maptest0_complex.dae  maptest0_overlap.dae  maptest2.dae
assets/models/: AnimTest2.dae  Floor.dae  Hammer.dae  ObjectAnim.dae  ObjectAnim_14.dae  TestParticle.ps  blood_stain.dae  box_scale.dae  boxtest.DAE  boxtest.mat  glassbox.dae  hinge_test.dae  hinge_test.ent  inverse_box.dae  joint2.dae  mine_barrel.dae  mine_barrel.ent  mine_barrel.mat  mine_barrel_bump.tga  misc_rect.dae  misc_rect.mat  multijoint_test.dae  nullparent_test.dae  physics_box.dae  rect.dae  rect2.dae  screw_test.dae  slider_test.dae  smallball.dae  smallball.mat  test_door01.dae  test_door01.ent  test_door01_closed.dae  test_door01_closing.dae  test_door01_open.dae  test_door01_opening.dae  tex_test.dae  tile_test.dae  transperant01.dae  transperant02.dae  (+4 more)
assets/textures/: LightFP.cg  LightVP.cg  Normalization_neg_z.tga  Normalization_pos_y.tga  PostEffectFP.cg  SimpleFP.cg  SimpleVP.cg  Spotlight.psd  Spotlight.tga  core_spot_negative_reject.tga  fire.ps  fireparticle.mat  floor.mat  floor_grate01.tga  light_player_flashlight_spot.lnt  material_floor.mat  material_metal11.mat  metal.mat  metal_bump.tga  misc_flare.mat  misc_flare2.mat  player_flashlight_gobo.tga  smiley_spot.lnt  splat3.mat  spotbeam.mat  svamp2.ogm  test.mat  test01.beam  test_gobo.tga  test_halo_flare.mat  test_halo_flare2.mat  test_video2.ogm  testar.mat  transperant01.mat  transperant02.mat  transperant03.mat  water_default_nmap.tga
include/: hpl.h
include/ai/: AI.h  AINodeContainer.h  AINodeGenerator.h  AStar.h  StateMachine.h
include/game/: Game.h  GameTypes.h  LowLevelGameSetup.h  SaveGame.h  ScriptFuncs.h  Updateable.h  Updater.h
include/graphics/: Animation.h  AnimationTrack.h  BackgroundImage.h  Beam.h  BillBoard.h  Bitmap2D.h  Bone.h  BoneState.h  Color.h  FontData.h  GPUProgram.h  GfxObject.h  Graphics.h  GraphicsDrawer.h  GraphicsTypes.h  ImageEntityData.h  LowLevelGraphics.h  LowLevelPicture.h  Material.h  MaterialHandler.h  Material_Additive.h  Material_Alpha.h  Material_BaseLight.h  Material_Bump.h  Material_BumpColorSpec.h  Material_BumpSpec.h  Material_BumpSpec2D.h  Material_Diffuse.h  Material_Diffuse2D.h  Material_DiffuseAdditive2D.h  Material_DiffuseAlpha2D.h  Material_DiffuseSpec.h  Material_EnvMap_Reflect.h  Material_Fallback01_BaseLight.h  Material_Fallback02_BaseLight.h  Material_Flat.h  Material_FontNormal.h  Material_Modulative.h  Material_ModulativeX2.h  Material_Smoke2D.h  (+23 more)
include/gui/: Gui.h  GuiGfxElement.h  GuiMaterial.h  GuiMaterialBasicTypes.h  GuiPopUp.h  GuiPopUpMessageBox.h  GuiSet.h  GuiSkin.h  GuiTypes.h  Widget.h  WidgetBaseClasses.h  WidgetButton.h  WidgetCheckBox.h  WidgetComboBox.h  WidgetFrame.h  WidgetImage.h  WidgetLabel.h  WidgetListBox.h  WidgetSlider.h  WidgetTextBox.h  WidgetWindow.h
include/haptic/: Haptic.h  HapticForce.h  HapticShape.h  HapticSurface.h  HapticTypes.h  LowLevelHaptic.h
include/impl/: CGProgram.h  CharacterBodyNewton.h  CollideShapeNewton.h  KeyboardSDL.h  LowLevelGraphicsSDL.h  LowLevelInputSDL.h  LowLevelPhysicsNewton.h  LowLevelResourcesSDL.h  LowLevelSoundOpenAL.h  LowLevelSystemSDL.h  MeshLoaderCollada.h  MeshLoaderMSH.h  MeshLoaderMap.h  MouseSDL.h  OcclusionQueryOGL.h  OpenALSoundChannel.h  OpenALSoundData.h  OpenALSoundEnvironment.h  PBuffer.h  PhysicsBodyNewton.h  PhysicsControllerNewton.h  PhysicsJointBallNewton.h  PhysicsJointHingeNewton.h  PhysicsJointNewton.h  PhysicsJointScrewNewton.h  PhysicsJointSliderNewton.h  PhysicsMaterialNewton.h  PhysicsWorldNewton.h  Platform.h  SDLBitmap2D.h  SDLFontData.h  SDLGameSetup.h  SDLPixelFormat.h  SDLTexture.h  SqScript.h  TaskKeyHook.h  VertexBufferOGL.h  VertexBufferVBO.h  VideoStreamTheora.h  scriptbuilder.h  (+3 more)
include/input/: Action.h  ActionHaptic.h  ActionKeyboard.h  ActionMouseButton.h  Input.h  InputDevice.h  InputTypes.h  Keyboard.h  LowLevelInput.h  Mouse.h
include/math/: BoundingVolume.h  CRC.h  Frustum.h  Math.h  MathTypes.h  MeshTypes.h  PidController.h  Quaternion.h  Spring.h  Vector2.h  Vector3.h
include/physics/: Body2D.h  CharacterBody.h  CollideData.h  CollideData2D.h  CollideShape.h  Collider2D.h  LowLevelPhysics.h  Physics.h  PhysicsBody.h  PhysicsController.h  PhysicsJoint.h  PhysicsJointBall.h  PhysicsJointHinge.h  PhysicsJointScrew.h  PhysicsJointSlider.h  PhysicsMaterial.h  PhysicsWorld.h  SurfaceData.h
include/resources/: AnimationManager.h  ConfigFile.h  EntityLoader_Object.h  FileSearcher.h  FontManager.h  FrameBase.h  FrameBitmap.h  FrameTexture.h  GpuProgramManager.h  ImageEntityManager.h  ImageManager.h  LanguageFile.h  LowLevelResources.h  MaterialManager.h  MeshLoader.h  MeshLoaderHandler.h  MeshManager.h  ParticleManager.h  ResourceBase.h  ResourceImage.h  ResourceManager.h  Resources.h  ResourcesTypes.h  ScriptManager.h  SoundEntityManager.h  SoundManager.h  TextureManager.h  TileSetManager.h  VideoManager.h
include/scene/: AnimationState.h  Area2D.h  Camera.h  Camera2D.h  Camera3D.h  ColliderEntity.h  Entity.h  Entity2D.h  Entity3D.h  GridMap2D.h  ImageEntity.h  Light.h  Light2D.h  Light2DPoint.h  Light3D.h  Light3DPoint.h  Light3DSpot.h  MeshEntity.h  MultiImageEntity.h  Node.h  Node2D.h  Node3D.h  NodeState.h  (+17 more)
tests/: SDLMain.h
(+441 files in other folders)
